--- a/app/views/rides/show.html.erb
+++ b/app/views/rides/show.html.erb
@@ -1,12 +1,37 @@
-<h3><%= @ride.name.titlecase %></h3><br />
-	<b>Route</b> <%= @route.name %><br />
-	<b>Difficulty: </b> <%= @ride.difficulty %><br />
-	<b>Start Time:</b> <%= @ride.start_time_hour %>:<%=@ride.start_time_min %> <%=@ride.start_time_am %><br />
-	<b>Frequency: </b> <%= @ride.frequency %><br />
-	<b>Meeting Points: </b> <%= @ride.meeting_points %><br />
+<h3><%= @ride.name.titlecase %>: Details</h3><br />
+<div class="table-responsive">
+	<table class="table table-striped">
+		<tr>
+			<th>Route</th>
+			<th>Difficulty</th>
+			<th>Start Time</th>
+			<th>Frequency</th>
+			<th>Current Bike Buddies</th>
+			<th></th>
+		</tr>
+		<tr>
+			<td><%= @ride.route.name %></td>
+			<td><%= @ride.difficulty %></td>
+			<td><%= @ride.start_time_hour %>:<%=@ride.start_time_min %> <%=@ride.start_time_am %></td>
+			<td><%= @ride.frequency %></td>
+			<td><% @users.each do |user| %>
+						<%= user.username %>  
+					<% end %>
+			</td>
+			<td>
+				<% if session[:remember_token].to_s == @ride.created_by %>
+					<%= link_to "Delete this Ride", [@ride.route, @ride], method: :destroy, data: { confirm: 'Are you sure?'} %> | 
+					<%= link_to "Edit this Ride", edit_route_ride_path %> 
+				<% end %>
+				<% unless @ride.users.include?(@user) %>
+					 | <%#= link_to "Follow this Ride", [@ride.route, @ride], method: :follow %> 
+				<% else %>
+					<%#= link_to "Unfollow this Ride", [@ride.route, @ride], method: :unfollow %>
+				<% end %>
+			</td>
+		</tr>
+	</table>
+</div>
 
-<br />
-
-<%= link_to "Delete this Ride", @ride, method: :delete %> | 
-<%= link_to "Back to Rides", route_rides_path(@route) %> | 
+<%= link_to "Back to Rides", route_rides_path(@ride.route) %> | 
 <%= link_to "Back to Routes", routes_path %>
