--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,10 +1,37 @@
 <%#= form_for @user, :html => { :multipart => true } %>
-<%= form_for @user do |f| %>
-	<li><b>Username:</b> <%= f.text_field :username %></li>
-	<li><b>Name:</b> <%= f.text_field :name %></li>
-	<li><b>Email:</b> <%= f.email_field :email %></li>
-	<li><b>Password:</b> <%= f.password_field :password %></li>
-	<li><b>Phone:</b> <%= f.phone_field :phone %></li>
-	<br />
-<%= f.submit %>
-<% end %>
+<div class="form col-lg-4 col-md-6">
+  <% if @user.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+      <ul>
+      <% @user.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+	<%= form_for @user do |f| %>
+		<div class="form-group">
+			<%= f.label :name %>
+			<%= f.text_field :name, :class => "form-control" %>
+		</div>
+		<div class="form-group">
+			<%= f.label :username %>
+			<%= f.text_field :username, :class => "form-control" %>
+		</div>	
+		<div class="form-group">
+			<%= f.label :email %>
+			<%= f.email_field :email, :class => "form-control" %>
+		</div>
+		<div class="form-group">
+			<%= f.label :password %>
+			<%= f.password_field :password, :class => "form-control" %>
+		</div>
+		<div class="form-group">
+			<%= f.label :phone %>
+			<%= f.phone_field :phone, :class => "form-control" %>
+		</div>
+		<%= f.submit :class => "btn btn-primary" %>
+	<% end %>
+</div>
