--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,15 +1,51 @@
 <h1><%= @user.name %>'s Rides</h1>
 
-<% @rides.each do |ride| %>
-	
-		<h3><%= ride.name.titlecase %></h3><br />
-		<b>Difficulty: </b> <%= ride.difficulty %><br />
-		<b>Start Time:</b> <%= ride.start_time_hour %>:<%=ride.start_time_min %> <%=ride.start_time_am %><br />
-		<b>Frequency: </b> <%= ride.frequency %><br />
-		<b>Meeting Points: </b> <%= ride.meeting_points %><br />
-
-		<%= link_to "View ride info", route_ride_path(ride, @route) %>
-
-	<br />
-
-<% end %>
+<div class="table-responsive">
+	<table class="table table-striped">
+		<tr>
+			<h3>My Rides</h3>
+		</tr>
+		<tr>
+			<th>Route</th>
+			<th>Ride Name</th>
+			<th>Difficulty</th>
+			<th>Start Time</th>
+			<th>Frequency</th>
+			<th></th>
+		</tr>
+		<% @user.rides.each do |ride| %>
+		<tr>
+			<td><%= ride.route.name %></td>
+			<td><%= ride.name.titlecase %></td>
+			<td><%= ride.difficulty %></td>
+			<td><%= ride.start_time_hour %>:<%=ride.start_time_min %> <%=ride.start_time_am %></td>
+			<td><%= ride.frequency %></td>
+			<td>
+				<%= link_to "View ride info", route_ride_path(ride._id, ride.route) %> | 
+				<%= link_to "Delete this Ride", [ride.route, ride], method: :destroy, data: { confirm: 'Are you sure?' }  %> | 
+				<%= link_to "Edit this Ride", edit_route_ride_path(ride._id, ride.route) %> 
+			</td>
+		</tr>
+		<% end %>
+	</table>
+	<table class="table table-striped">
+		<tr>
+			<h3>My Followed Rides</h3>
+		</tr>
+		<%#= raise @followed_rides.all.inspect %>
+		<% @followed_rides.all do |ride| %>
+		<tr>
+			<td><%= ride.route.name %></td>
+			<td><%= ride.name.titlecase %></td>
+			<td><%= ride.difficulty %></td>
+			<td><%= ride.start_time_hour %>:<%=ride.start_time_min %> <%=ride.start_time_am %></td>
+			<td><%= ride.frequency %></td>
+			<td>
+				<%= link_to "View ride info", route_ride_path(ride._id, ride.route) %> | 
+				<%= link_to "Delete this Ride", ride, method: :destroy, data: { confirm: 'Are you sure?' }  %> | 
+				<%= link_to "Edit this Ride", edit_route_ride_path(ride._id, ride.route) %> 
+			</td>
+		</tr>
+		<% end %>
+	</table>
+</div>
