--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Browse All Routes</h1>
-<div class="table-responsive">
+<div id="routes-index-view" class="table-responsive">
   <table class="table table-striped">
     <tr>
       <th>Route</th>
