--- a/app/assets/stylesheets/routes.css.scss
+++ b/app/assets/stylesheets/routes.css.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the routes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#rides-index-view, #routes-index-view {
+	max-height: 300px;
+	overflow-y: scroll;
+}
