--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -48,36 +48,9 @@
   var mapOptions = {
     zoom:11,
     center: losAngeles
-  };
-
-  var styles = [
-    {
-      stylers: [
-        { hue: "#00ffe6" },
-        { saturation: -20 }
-      ]
-    },{
-      featureType: "road",
-      elementType: "geometry",
-      stylers: [
-        { lightness: 100 },
-        { visibility: "simplified" }
-      ]
-    },{
-      featureType: "road",
-      elementType: "labels",
-      stylers: [
-        { visibility: "off" }
-      ]
-    }
-  ];
-
-  handler.buildMap({provider: mapOptions, provider_key: "AIzaSyDJJPOQH24cT6ETa9IZacS7NENpUt2MKzA", 
-    internal: {id: 'map-canvas'}
-    }, function(){
-      directionsDisplay.setMap(handler.getMap());
-      directionsDisplay.setOptions({styles: styles});
-    }
-  );
+  }
+  handler.buildMap({provider: mapOptions, provider_key: "AIzaSyDJJPOQH24cT6ETa9IZacS7NENpUt2MKzA", internal: {id: 'map-canvas'}}, function(){
+    directionsDisplay.setMap(handler.getMap());
+  });
 
 </script>
