--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,6 +32,7 @@
 			<%= f.label :phone %>
 			<%= f.phone_field :phone, :class => "form-control" %>
 		</div>
+		<%= f.file_field :avatar %>
 		<%= f.submit :class => "btn btn-primary" %>
 	<% end %>
 </div>
