--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,6 +18,7 @@
 	<li><b>Name:</b> <%= f.text_field :name %></li>
 	<li><b>Email:</b> <%= f.email_field :email %></li>
 	<li><b>Phone:</b> <%= f.phone_field :phone %></li>
+	<li><b>Avatar:</b> <%= f.file_field :avatar %></li>
 	
 <%= f.submit %>
 <% end %>
